packages/forge-dsl/fixtures/errors/e20-unterminated-inline.fable
// expect: FORGE104
-> go

=== go ===
The gate is {locked
-> END
